--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Software Engineer - Distributed Systems - Java - DevOps - Linux - Docker - K8s - AWS - React - Cyber Security</p>
+                <p class="masthead-subheading font-weight-light mb-0">Senior Software Engineer | Java - C/C++ - Rust - Python | FinTech - Open Banking - CBPR - Swift Payment | Database Internals - Distributed Systems | DevOps - Cloud Native - AWS - Azure </p>
             </div>
         </header>
         <!-- Portfolio Section-->
