--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         content="S. Rikhi Ram — Senior Software Engineer specializing in Java, Rust, FinTech, Distributed Systems, and Cloud Native architecture." />
     <meta name="author" content="S. Rikhi Ram" />
     <title>S. Rikhi Ram — Senior Software Engineer</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="assets/img/rikhi-avatar.svg" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,6 +19,8 @@
     <script src="https://use.fontawesome.com/releases/v6.5.1/js/all.js" crossorigin="anonymous"></script>
     <!-- Stylesheet -->
     <link href="css/styles.css" rel="stylesheet" />
+    <meta name="base-path" content="./" />
+    <meta name="is-homepage" content="true" />
 </head>
 
 <body id="page-top">
@@ -28,25 +30,8 @@
     <div class="gradient-orb orb-2"></div>
     <div class="gradient-orb orb-3"></div>
 
-    <!-- Navigation -->
-    <nav class="navbar" id="mainNav">
-        <div class="nav-container">
-            <a class="nav-brand" href="#page-top">
-                <span class="brand-icon">R</span>
-                <span class="brand-text">Rikhi</span>
-            </a>
-            <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
-                <span class="hamburger"></span>
-            </button>
-            <ul class="nav-links" id="navLinks">
-                <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#skills" class="nav-link">Skills</a></li>
-                <li><a href="#services" class="nav-link">Services</a></li>
-                <li><a href="#blogs" class="nav-link">Blog</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+    <!-- Navigation (loaded from components/header.html) -->
+    <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
     <section class="hero" id="hero">
@@ -158,7 +143,7 @@
                                 rel="noopener">
                                 <i class="fab fa-linkedin"></i> <span>LinkedIn Profile</span>
                             </a>
-                            <a href="#blogs" class="btn btn-glass">
+                            <a href="blog/" class="btn btn-glass">
                                 <i class="fas fa-pen-nib"></i> <span>Read My Blog</span>
                             </a>
                         </div>
@@ -331,7 +316,7 @@
                         <h3>Building Resilient Microservices with Rust</h3>
                         <p>Exploring how Rust's ownership model enables building zero-cost, fault-tolerant distributed
                             services at scale.</p>
-                        <a href="#!" class="blog-link">
+                        <a href="blog/building-resilient-microservices-with-rust.html" class="blog-link">
                             Read Article <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -351,7 +336,7 @@
                         <h3>Payment Security in the Age of Open Banking</h3>
                         <p>A deep dive into securing CBPR+ and Swift payment flows while maintaining compliance with
                             global standards.</p>
-                        <a href="#!" class="blog-link">
+                        <a href="blog/payment-security-open-banking.html" class="blog-link">
                             Read Article <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -371,7 +356,7 @@
                         <h3>Zero-Downtime Migrations to Kubernetes</h3>
                         <p>Strategies for migrating legacy monoliths to cloud-native K8s clusters without impacting
                             production uptime.</p>
-                        <a href="#!" class="blog-link">
+                        <a href="blog/zero-downtime-kubernetes-migration.html" class="blog-link">
                             Read Article <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -416,37 +401,11 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-top">
-                    <div class="footer-brand">
-                        <span class="brand-icon">R</span>
-                        <span class="brand-text">S. Rikhi Ram</span>
-                    </div>
-                    <div class="footer-social">
-                        <a href="https://www.linkedin.com/in/rikhiram/" target="_blank" rel="noopener"
-                            aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#!" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                        <a href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div class="footer-divider"></div>
-                <div class="footer-bottom">
-                    <p class="footer-tagline">Building the future, one line of code at a time.</p>
-                    <p class="footer-copy">&copy; 2020–2026 S. Rikhi Ram. All rights reserved.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Scroll to Top -->
-    <a href="#page-top" class="scroll-top" id="scrollTop" aria-label="Scroll to top">
-        <i class="fas fa-chevron-up"></i>
-    </a>
+    <!-- Footer (loaded from components/footer.html) -->
+    <div id="footer-placeholder"></div>
 
     <!-- Scripts -->
+    <script src="js/components.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
